# flappy-rust

./: .commitlintrc.yml  .gitignore  .rumdl.toml  Cargo.toml  Makefile.toml  README.md  bootstrap.sh  cliff.toml  clippy.toml  deny.toml  rustfmt.toml
.cargo-husky/hooks/: commit-msg  pre-commit  pre-push
.github/: copilot-instructions.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/prompts/: commit-message.prompt.md  peer-review.prompt.md  pull-request.prompt.md
.github/workflows/: ci.yml
assets/icons/: icon.icns
ios/: dummy.c  project.yml
ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/FlappyRust.xcodeproj/: project.pbxproj
ios/FlappyRust.xcodeproj/project.xcworkspace/xcuserdata/matthieudaulhiac.xcuserdatad/: UserInterfaceState.xcuserstate
ios/FlappyRust.xcodeproj/xcuserdata/matthieudaulhiac.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: components.rs  constants.rs  lib.rs  main.rs  resources.rs  states.rs  utils.rs
src/systems/: bird.rs  collision.rs  effects.rs  game.rs  mod.rs  pipes.rs  score.rs  setup.rs  viewport.rs
tests/: integration_test.rs
