[package]
name = "flappy-rust"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Flappy Bird clone built with Bevy"
repository = "https://github.com/MatthieuD134/rust-template"
readme = "README.md"

[dependencies]
bevy = "0.17.3"

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false
features = ["user-hooks"]
