[package]
name = "flappy-rust"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Flappy Bird clone built with Bevy"
repository = "https://github.com/MatthieuD134/flappy-rust"
readme = "README.md"

[package.metadata.bundle]
name = "Flappy Rust"
identifier = "com.matthieud134.flappy-rust"
icon = ["assets/icons/icon.icns"]
category = "Game"
short_description = "A Flappy Bird clone built with Bevy"
copyright = "Copyright © 2025 Matthieu Daulhiac"

[lib]
name = "flappy_rust"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
bevy = "0.17.3"

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false
features = ["user-hooks"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 1

# Optimized release profile for iOS builds.
# Uses LTO and single codegen unit for smaller binary size and better performance.
[profile.ios-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
